--- a/css/styles.css
+++ b/css/styles.css
@@ -303,7 +303,9 @@ img {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	transition: background-color 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+	transition:cubic-bezier(0.4, 0, 0.2, 1);
+	transition-delay: 250ms;
+
 }
 
 .team-social-link:hover,
