--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,7 @@ img {
 }
 
 .header-nav-link {
+	position: relative;
 	font-weight: 500;
 	line-height: 1.5;
 	letter-spacing: 0.02em;
@@ -115,9 +116,28 @@ img {
 	padding-bottom: 24px;
 }
 
+.header-nav-link.active {
+	color: var(--color-ocean);
+}
+
 .header-nav-link:hover, 
 .header-nav-link:focus {
 	color: var(--color-ocean);
+}
+
+.header-nav-link::after {
+	content: "";
+	position: absolute;
+	bottom: -3px;
+	left: 0;
+	display: block;
+	width: 100%;
+	height: 4px;
+	border-radius: 4px;
+}
+
+.header-nav-link.active::after {
+	background-color: var(--color-ocean);
 }
 
 .header-address {
