--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,7 @@ img {
 
 .header-nav-list {
 	margin-right: 40px;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-nav-list:last-child {
@@ -108,12 +109,14 @@ img {
 
 .header-nav-link {
 	position: relative;
+
 	font-weight: 500;
 	line-height: 1.5;
 	letter-spacing: 0.02em;
 	color:var(--color-navy-blue);
 	padding-top: 24px;
 	padding-bottom: 24px;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-nav-link.active {
@@ -128,12 +131,12 @@ img {
 .header-nav-link::after {
 	content: "";
 	position: absolute;
-	bottom: -3px;
+	bottom: -1px;
 	left: 0;
 	display: block;
 	width: 100%;
 	height: 4px;
-	border-radius: 4px;
+	border-radius: 2px;
 }
 
 .header-nav-link.active::after {
