--- a/css/styles.css
+++ b/css/styles.css
@@ -329,6 +329,7 @@ img {
 	justify-content: center;
 	transition:cubic-bezier(0.4, 0, 0.2, 1);
 	transition-delay: 250ms;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -424,6 +425,7 @@ margin-bottom: 8px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover,
@@ -497,6 +499,7 @@ margin-bottom: 8px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-media-link:hover,
