--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,10 @@ img {
 	font-style: normal;
 }
 
+.button {
+
+}
+
 /*
 ========= header style ========= 
 */
@@ -220,7 +224,18 @@ img {
 	border-radius: 4px;
 	cursor: pointer;
 	margin: 0 auto;
-	}
+
+	transition:cubic-bezier(0.4, 0, 0.2, 1);
+	transition-delay: 250ms;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	/*
+	transition-property: color, background-color, transform;
+	transition-duration: 300ms, 1000ms, 500ms;
+	transition-timing-function: ease, ease, cubic-bezier(0.37, -0.4, 0.67, 1.37);
+	transition-delay: 0ms, 1000ms, 500ms;
+	*/
+}
+
 .hero-button:hover,
 .hero-button:focus {
 	background-color: var(--color-ocean);
@@ -330,7 +345,6 @@ img {
 	transition:cubic-bezier(0.4, 0, 0.2, 1);
 	transition-delay: 250ms;
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .team-social-link:hover,
