--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,8 @@
 	--color-white: #ffffff;
 	--color-dairy: #fcfcfc;
 	/*  others  */
+	--transition-effect: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 /*
@@ -245,40 +247,53 @@ img {
 =========  modal style   ========= 
 */
 
-.backdrop,
+.backdrop {
+	position: fixed;
+	top: 0;
+	z-index: 999;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(46, 47, 66, 0.4);
+	transition: opacity var(--transition-effect), visibility var(--transition-effect);
+}
+
+.modal {
+	position: absolute;
+	width: 408px;
+	min-height: 584px;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%) scaleY(1);
+	transition: transform var(--transition-effect);
+	background: var(--color-dairy);
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+}
+
+.modal-close-button {
+	position: absolute;
+	right: 24px;
+	top: 24px;
+	width: 24px;
+	height: 24px;
+	cursor: pointer;
+	background-color: var(--color-cornflower);
+	border-radius: 50%;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.modal-close-icon {
+
+}
+
 .is-hidden {
 	visibility: hidden;
 	opacity: 0;
 	pointer-events: none;
 }
 
-.backdrop {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(46, 47, 66, 0.4);
-	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.is-hidden {
-	opacity: o;
-
-}
-
-.modal {
-	position: absolute;
-	top: 50%; 
-	left: 50%;
-	transform: translate(-50%, -50%) scale(1);
-	width: 408px;
-	min-height: 584px;
-	background: var(--color-dairy);
-	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
-	border-radius: 4px; 
-	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+.backdrop.is-hidden .modal {
+	transform: translate(-50%, -50%) scaleY(0);
 }
 
 /*
