--- a/css/styles.css
+++ b/css/styles.css
@@ -276,6 +276,7 @@ img {
 	top: 24px;
 	width: 24px;
 	height: 24px;
+	padding: 0;
 	cursor: pointer;
 	background-color: var(--color-cornflower);
 	border-radius: 50%;
@@ -283,7 +284,7 @@ img {
 }
 
 .modal-close-icon {
-
+	fill: var(--color-grey);
 }
 
 .is-hidden {
@@ -669,4 +670,27 @@ margin-bottom: 8px;
 	padding: 32px 16px;
 	border: 1px solid var(--color-cornflower);
 	border-top: none;
+}
+
+.card-thumb {
+	position: relative;
+}
+
+/*
+========= portfolio overlay ========= 
+*/
+
+.overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: var(--color-iris);
+	width: 100%;
+	height: 100%;
+}
+
+.overlay-text {
+	color: var(--color-cloud);
+	padding: 40px 32px;
+
 }
