--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,7 @@ img {
 	background: var(--color-dairy);
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 4px;
+	padding: 72px 24px
 }
 
 .modal-close-button {
@@ -295,6 +296,17 @@ img {
 
 .backdrop.is-hidden .modal {
 	transform: translate(-50%, -50%) scaleY(0);
+}
+
+.modal-title {
+	text-align: center;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color:var(--color-navy-blue);
+	margin-bottom: 16px;
+
 }
 
 /*
