--- a/css/styles.css
+++ b/css/styles.css
@@ -284,6 +284,32 @@ img {
 	border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+.modal-send-button {
+	font-family: var(--primary-font);
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.04em;
+	cursor: pointer;
+	background-color: var(--color-iris);
+	color:var(--color-white);
+	display: block;
+	min-width: 169px;
+	height: 56px;
+	border-radius: 4px;
+	margin: 0 auto;
+	padding: 16px 32px;
+	align-items: flex-start;
+	gap: 10px;
+	border: none;
+	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.modal-send-button:hover,
+.modal-send-button:focus {
+	background-color: var(--color-ocean);
+}
+
 .modal-close-icon {
 	fill: var(--color-grey);
 }
@@ -306,7 +332,28 @@ img {
 	letter-spacing: 0.02em;
 	color:var(--color-navy-blue);
 	margin-bottom: 16px;
+	text-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
+	0px 1px 1px rgba(46, 47, 66, 0.16), 
+	0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 
+.modal-form {
+	margin-bottom: 8px;
+}
+
+.modal-input {
+	width: 100%;
+	height: 68px;
+	border-radius: 4px;
+	border: 1px solid var(--color-slate);
+	margin-bottom: 26px;
+	padding-left: 38px;
+	background-color: transparent;
+}
+
+.modal-input:hover,
+.modal-input:focus {
+	border: 1px solid var(--color-iris);
 }
 
 /*
