--- a/css/styles.css
+++ b/css/styles.css
@@ -247,6 +247,10 @@ img {
 =========  modal style   ========= 
 */
 
+.modal-box {
+
+}
+
 .backdrop {
 	position: fixed;
 	top: 0;
@@ -267,8 +271,7 @@ img {
 	transition: transform var(--transition-effect);
 	background: var(--color-dairy);
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
-	border-radius: 4px;
-	padding: 72px 24px
+	padding: 72px 24px 24px 24px;
 }
 
 .modal-close-button {
@@ -337,16 +340,26 @@ img {
 	0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
+.modal-lable {
+	color: rgba(142, 143, 153, 1);
+	margin-bottom: 4px;
+	display: inline-block;
+	font-size: 12px;
+	font-family: var(--primary-font);
+	line-height: 14px;
+	letter-spacing: 0.48px;
+}
+
 .modal-form {
 	margin-bottom: 8px;
 }
 
 .modal-input {
 	width: 100%;
-	height: 68px;
+	height: 58px;
 	border-radius: 4px;
 	border: 1px solid var(--color-slate);
-	margin-bottom: 26px;
+	margin-bottom: 8px;
 	padding-left: 38px;
 	background-color: transparent;
 }
