--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,7 @@ img {
 */
 
 .modal-box {
-
+	padding: 72px 24px 24px 24px;
 }
 
 .backdrop {
@@ -317,6 +317,18 @@ img {
 	fill: var(--color-grey);
 }
 
+.modal-icon {
+	position: absolute;
+	left: 16px;
+	top: 50%;
+	transform: translateY(-50%);
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icon:hover {
+	fill: var(--color-iris); 
+}
+
 .is-hidden {
 	visibility: hidden;
 	opacity: 0;
@@ -341,32 +353,59 @@ img {
 }
 
 .modal-lable {
-	color: rgba(142, 143, 153, 1);
+	color: var(--color-light-slate) ;
 	margin-bottom: 4px;
-	display: inline-block;
+	display: block;
 	font-size: 12px;
 	font-family: var(--primary-font);
-	line-height: 14px;
-	letter-spacing: 0.48px;
+	line-height: 1.17;
+	letter-spacing: 0.04em;
 }
 
 .modal-form {
 	margin-bottom: 8px;
+	position: relative;
 }
 
 .modal-input {
 	width: 100%;
-	height: 58px;
+	height: 40px;
 	border-radius: 4px;
-	border: 1px solid var(--color-slate);
+	border: 1px solid rgba(46, 47, 66, 0.4);
 	margin-bottom: 8px;
 	padding-left: 38px;
 	background-color: transparent;
+	outline: transparent;
+	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:hover,
 .modal-input:focus {
 	border: 1px solid var(--color-iris);
+}
+
+.modal-comment {
+	margin-bottom: 16px;
+}
+
+.modal-input-comment {
+	width: 100%;
+	height: 120px; 
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.04em;
+	color: rgba(46, 47, 66, 0.4);
+	border: 1px solid rgba(46, 47, 66, 0.4);
+	border-radius: 4px;
+	background-color: transparent;
+	padding: 8px 16px;
+	outline: transparent;
+	resize: none;
+	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input-comment:focus {
+	border-color: var(--color-iris);
 }
 
 /*
