--- a/css/styles.css
+++ b/css/styles.css
@@ -408,6 +408,33 @@ img {
 	border-color: var(--color-iris);
 }
 
+.modal-checkbox {
+	margin-bottom: 24px;
+}
+
+.user-privacy {
+	visibility: hidden;
+}
+
+.modal-checkbox-lable {
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.04em;
+	color: var(--color-light-slate);
+}
+
+.checkbox-lable {
+	width: 16px;
+	height: 16px;
+	border: 1px solid rgba(46, 47, 66, 0.4);
+	border-radius: 2px;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	fill: transparent;
+}
+
 /*
 ========= advantages style section 2 ========= 
 */
