--- a/css/styles.css
+++ b/css/styles.css
@@ -306,6 +306,7 @@ img {
 	gap: 10px;
 	border: none;
 	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .modal-send-button:hover,
@@ -325,7 +326,8 @@ img {
 	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-icon:hover {
+.modal-icon:hover,
+.modal-icon:focus {
 	fill: var(--color-iris); 
 }
 
@@ -388,11 +390,11 @@ img {
 	border: 1px solid var(--color-iris);
 }
 
-.modal-comment {
+.modal-field {
 	margin-bottom: 16px;
 }
 
-.modal-input-comment {
+.modal-textarea {
 	width: 100%;
 	height: 120px; 
 	font-size: 12px;
@@ -420,24 +422,39 @@ img {
 	visibility: hidden;
 }
 
-.modal-checkbox-lable {
+.check-text {
 	font-size: 12px;
 	line-height: 1.17;
 	letter-spacing: 0.04em;
 	color: var(--color-light-slate);
+	font-family: var(--primary-font);
 }
 
-.modal-check {
+.check-text span {
 	width: 16px;
 	height: 16px;
 	border: 1px solid rgba(46, 47, 66, 0.4);
-	border-radius: 2px;
+	border-radius: 2px; 
 	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
 	fill: transparent;
+	align-items: center;
+	justify-content: center;
 }
+
+.check-text a {
+	color: var(--color-iris);
+	text-decoration: underline;
+}
+
+.input-check:checked + .check-text span {
+	background-color: var(--color-ocean);
+	border: none;
+}
+
+
 
 /*
 ========= advantages style section 2 ========= 
