--- a/css/styles.css
+++ b/css/styles.css
@@ -375,6 +375,10 @@ img {
 	letter-spacing: 0.04em;
 }
 
+.modal-input:focus + .modal-icon {
+	fill: var(--color-iris);
+}
+
 .input-wrap {
 	position: relative;
 }
@@ -419,6 +423,10 @@ img {
 	outline: transparent;
 	resize: none;
 	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-textarea:focus {
+	border-color: var(--color-iris);
 }
 
 .modal-input-comment:focus {
