--- a/css/styles.css
+++ b/css/styles.css
@@ -425,6 +425,10 @@ img {
 	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-textarea::placeholder {
+	font-family: var(--primary-font);
+}
+
 .modal-textarea:focus {
 	border-color: var(--color-iris);
 }
@@ -472,7 +476,7 @@ img {
 .input-check:checked + .check-text span {
 	background-color: var(--color-ocean);
 	border: none;
-	fill: var(--color-white);
+	fill: var(--color-cloud);
 }
 
 .visually-hidden {
@@ -768,6 +772,79 @@ margin-bottom: 8px;
 .footer-media-icon {
 	fill: var(--color-cloud);
 }
+
+.footer-form-title{
+	margin-bottom: 16px;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color: var(--color-white);
+}
+
+.footer-bottom {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-left: 80px;
+}
+
+.footer-form {
+	display: flex;
+	gap: 24px;
+}
+
+.footer-email {
+	gap: 24px;
+}
+
+.footer-input {
+	width: 264px; 
+	height: 40px;
+	border: 1px solid var(--color-white);
+	background-color: transparent;
+	font-size: 12px;
+	line-height: 1.5;
+	letter-spacing: 0.04em;
+	padding-left: 16px;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+	border-radius: 4px;
+	color: var(--color-white);
+	margin-right: 24px;
+}
+
+.input-footer::placeholder {
+	color: var(--color-white);
+	font-family: var(--primary-font);
+}
+
+.submit-button {
+	min-width: 165px;
+	height: 40px;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	font-family: var(--primary-font);
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 1.5;
+	letter-spacing: 0.04em;
+	color: var(--color-white);
+	cursor: pointer;
+	background-color: var(--color-iris);
+	border: none;
+	border-radius: 4px;
+}
+
+.footer-send-icon {
+	margin-left: 16px;
+	fill: var(--color-white);
+	line-height: 24px;
+	letter-spacing: 0.48px;
+	font-size: 12px;
+}
+
+
 
 /*
 ========= portfolio style ========= 
